Correction bug + Cleanup code